--- a/apps/web/src/app/styles.css
+++ b/apps/web/src/app/styles.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* https://www.joshwcomeau.com/gradient-generator?colors=1e002a|2a003c&angle=180&colorMode=hsl&precision=5&easingCurve=0.333|1|0.21982758620689655|0.07990975215517242 */
+.gradient {
+  background-image: linear-gradient(
+    180deg,
+    hsl(279deg 100% 3%) 0%,
+    hsl(279deg 100% 4%) 28%,
+    hsl(277deg 100% 5%) 39%,
+    hsl(276deg 100% 6%) 46%,
+    hsl(275deg 100% 8%) 52%,
+    hsl(275deg 100% 9%) 59%,
+    hsl(273deg 100% 10%) 67%,
+    hsl(273deg 100% 11%) 78%,
+    hsl(273deg 100% 13%) 100%
+  );
+}
